// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrComment Component should display Customer interaction 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="CUSTOMER_INTERACTION_CommentDescription"
        secondary="Kundeninteraktion und -veränderung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
        id="CUSTOMER_INTERACTION_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    />
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(PrTextField)
        id="CUSTOMER_INTERACTION_CommentId"
        label="Kommentar"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="iii"
        startrows="2"
        writeableText="iii"
      />
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="CUSTOMER_INTERACTION"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrComment Component should display ProblemAnalysis 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="PROBLEM_ANALYSIS_CommentDescription"
        secondary="Problemanalyse und -lösung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
        id="PROBLEM_ANALYSIS_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    />
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(PrTextField)
        id="PROBLEM_ANALYSIS_CommentId"
        label="Kommentar"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="ggg"
        startrows="2"
        writeableText="ggg"
      />
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="PROBLEM_ANALYSIS"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrComment Component should display Teamwork 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="TEAMWORK_CommentDescription"
        secondary="Effektives Arbeiten im Team und Teamführung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
        id="TEAMWORK_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    />
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(PrTextField)
        id="TEAMWORK_CommentId"
        label="Kommentar"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="fff"
        startrows="2"
        writeableText="fff"
      />
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="TEAMWORK"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;

exports[`PrComment Component should display the ContributionToCompanyDevelopment 1`] = `
<div
  className=""
>
  <div
    className="PrComment-containerListItem-3"
  >
    <WithStyles(ListItem)
      button={true}
      className="PrComment-nestedListItem-4"
      onClick={[Function]}
    >
      <WithStyles(ListItemText)
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentDescription"
        secondary="Beitrag zur Unternehmensentwicklung"
      />
      <WithStyles(Icon)
        className="PrComment-iconComment-5"
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentIconId"
      >
        info
      </WithStyles(Icon)>
    </WithStyles(ListItem)>
    <WithStyles(ListItem)
      className="PrComment-nestedNumber-7"
    />
  </div>
  <div>
    <WithStyles(List)
      className="PrComment-nestedText-1"
      component="div"
      disablePadding={true}
    >
      <WithStyles(PrTextField)
        id="CONTRIBUTION_TO_COMPANY_DEVELOPMENT_CommentId"
        label="Kommentar"
        onChange={[Function]}
        openEditing={true}
        readOnlyText="hhh"
        startrows="2"
        writeableText="hhh"
      />
      <WithStyles(Collapse)
        in={false}
        timeout="auto"
        unmountOnExit={true}
      >
        <WithStyles(PrSwipePositionDescription)
          category="CONTRIBUTION_TO_COMPANY_DEVELOPMENT"
        />
      </WithStyles(Collapse)>
    </WithStyles(List)>
  </div>
</div>
`;
